# rust-project

./: .env.dist  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/cmd/app/: main.rs
backend/migration/: Cargo.toml
backend/migration/src/: dev_insert_default_users.rs  lib.rs  m20240804_165641_user.rs  user.rs
backend/migration/src/migrations/: mod.rs
backend/migration/src/migrations/admin/: admin_entities.rs  admin_roles.rs  admin_users.rs  mod.rs  permissions.rs  roles_permissions_assignements_entities.rs  site.rs  users_permissions_assignements_entities.rs  users_roles_assignements.rs
backend/migration/src/migrations/admin/data_seed/: add_entities.rs  add_permissions.rs  add_roles.rs  mod.rs
backend/migration/src/migrations/admin/data_seed/development/: add_admin_users.rs  add_roles_permissions_assignements.rs  add_sites.rs  add_users_permissions_assignements.rs  add_users_roles_assignements.rs  mod.rs
backend/migration/src/migrations/users/: address.rs  mod.rs  organisation.rs  roles.rs  users.rs
backend/migration/src/migrations/users/data_seed/development/: add_users.rs  mod.rs
backend/src/internal/api/admin/users/: mod.rs
backend/src/internal/api/admin/users/controllers/: auth.rs  users.rs
backend/src/internal/api/admin/users/errors/: action.rs  auth.rs  db.rs  entity.rs  interface.rs  mod.rs  permission.rs  user.rs  users.rs
backend/src/internal/api/admin/users/models/: admin_actions.rs  admin_entities.rs  admin_roles.rs  admin_roles_actions_entities_assignements.rs  admin_users.rs  admin_users_actions_entities_assignements.rs  admin_users_roles.rs  mod.rs
backend/src/internal/api/admin/users/services/: actions.rs  auth.rs  entities.rs  mod.rs  permissions.rs  users.rs
backend/src/internal/api/user/: mod.rs
backend/src/internal/api/user/controllers/graphql/: mod.rs  test_user.rs  user.rs
backend/src/internal/api/user/controllers/rest/: mod.rs  test_user.rs  user.rs
backend/src/internal/api/user/models/: user.rs
backend/src/internal/api/user/routes/: user.rs
backend/src/internal/api/user/services/: mod.rs  test_user.rs  user.rs
backend/src/internal/api/users/controllers/: mod.rs  test_users.rs
backend/src/internal/api/users/controllers/graphql/: mod.rs  users.rs
backend/src/internal/api/users/models/: users.rs
backend/src/internal/api/users/services/: jwt.rs  mod.rs  sav.rs  test_users.rs  users.rs
backend/src/internal/entities/: mod.rs
backend/src/internal/graphql/: mod.rs  mutations.rs  queries.rs
backend/test_curl/: collection_create.sh  collections.sh  fields.sh
cmd/app/: main.rs
cmd/cli/: main.rs
cmd/test/: main.rs
docker/: .env.dist
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-admin/: global.d.ts  package.json  pnpm-lock.yaml
frontend-admin/src/: middleware.ts
frontend-admin/src/app/: page.tsx
frontend-admin/src/app/api/login/: route.ts
frontend-admin/src/components/: LoginForm.tsx
frontend-admin/src/data/: user.ts
frontend-admin/src/data/users/: generateToken.ts
frontend-admin/src/lib/: process.env.ts
frontend-admin/src/lib/graphql/: client.ts
frontend-admin/src/models/users/: generateToken.ts  isAuth.ts
frontend/src/: App.svelte  app.html  hooks.server.ts  middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/dashboard/: layout.tsx
frontend/src/app/admin/dashboard/users/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/examples/: users-with-ssg.tsx  users-with-ssr.tsx  users.tsx
frontend/src/lib/: apollo.ts
frontend/src/lib/graphql/: client.ts
frontend/src/pages/: users-with-ssg.tsx  users-with-ssr.tsx
frontend/src/routes/: +page.svelte
frontend/src/routes/user/[id]/: +page.svelte  +page.ts
frontend/src/routes/users/: +page.svelte  +page.ts
frontend/src/stores/: getuser.ts
frontend2/: package.json  pnpm-lock.yaml
frontend2/src/: App.tsx
frontend2/src/components/: Users.tsx
frontend2/src/hooks/: queryUsers.tsx
frontend2/src/pages/: Users.tsx
frontend3/: package.json  pnpm-lock.yaml
frontend3/src/lib/: graphqlClient.ts
frontend3/src/routes/: users.tsx
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
src/internal/api/user/controllers/graphql/: mod.rs  user.rs
src/internal/api/user/controllers/rest/: user.rs
src/internal/api/user/routes/: mod.rs
src/internal/api/user/services/: user.rs
src/internal/entities/: collection.rs  field.rs
test_curl/: fields_create.sh
