[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "app"
path = "cmd/app/main.rs"

[[bin]]
name = "cli"
path = "cmd/cli/main.rs"

[[bin]]
name = "test"
path = "cmd/test/main.rs"
