[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4.0"
actix-rt = "2.5"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json"] }
sea-orm-macros = "0.12.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }

[[bin]]
name = "app"
path = "cmd/app/main.rs"

[[bin]]
name = "cli"
path = "cmd/cli/main.rs"

[[bin]]
name = "test"
path = "cmd/test/main.rs"
