# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
# A powerful, pragmatic, and extremely fast web framework for Rust.
actix-web = "4.0"
# Actix runtime support.
actix-rt = "2.5"
# for cors
actix-cors = "0.7" 
# Integration for async-graphql with actix-web.
async-graphql-actix-web = "7.0.11"
# Asynchronous GraphQL implementation for Rust, with dynamic schema and UUID support.
async-graphql = { version = "7.0.11", features = ["dynamic-schema", "uuid"] }
# Allows the definition of async functions in traits.
async-trait = "0.1.50"
# Loads environment variables from a .env file.
dotenv = "0.15.0"

# Provides a logger configured via environment variables.
env_logger = "0.11.5"
# A lightweight logging facade for producing log messages.
log = "0.4"
# An ORM for Rust, with support for PostgreSQL and asynchronous runtime.
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "mock"] }
# Macros for sea-orm to derive models easily.
sea-orm-macros = "1.1.0-rc.1"
# Serialization framework for Rust.
serde = { version = "1.0", features = ["derive"] }
# JSON serialization and deserialization for Rust.
serde_json = "1.0"
# Asynchronous runtime for Rust with a focus on speed and concurrency.
tokio = { version = "1", features = ["full"] }
# Universally unique identifiers (UUIDs) for Rust, with serde support and version 4 UUIDs.
uuid = { version = "1", features = ["serde", "v4"] }
# Library for encoding and decoding JSON Web Tokens (JWTs).
jsonwebtoken = "9"
thiserror = "2.0"
# A library for parsing, formatting, and calculating with dates and times.
chrono = "0.4"
# A library for hashing passwords.
bcrypt = "0.15.1"

[[bin]]
name = "app"
path = "cmd/app/main.rs"

