[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
# Universally unique identifiers (UUIDs) for Rust, with serde support and version 4 UUIDs.
uuid = { version = "1", features = ["serde", "v4"] }
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "mock"] }
# Loads environment variables from a .env file.
dotenv = "0.15.0"
# Provides a logger configured via environment variables.
env_logger = "0.10"
# A lightweight logging facade for producing log messages.
log = "0.4"

[dependencies.sea-orm-migration]
version = "1.1.0-rc.1"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-postgres",
  "runtime-tokio-native-tls",
]
